--- a/verify-email/assets/main.css
+++ b/verify-email/assets/main.css
@@ -12,6 +12,7 @@ body {
     background-color: #ffffff;
     color: #0A0E27;
     word-break: break-word;
+    padding-top: 10px;
 }
 
 a {
@@ -24,10 +25,21 @@ a {
 }
 
 .logo {
-    width: 112px;
+    width: 150px;
     height: auto;
-    margin-left: auto;
-    margin-right: auto;
+    display: block;
+}
+
+.font-bold {
+    font-weight: bold;
+}
+
+.header {
+    font-size: 32px;
+}
+
+.text-lg {
+    font-size: 110%;
 }
 
 .text-purple {
@@ -47,12 +59,6 @@ a {
     padding: 30px;
 }
 
-.number-box {
-    border-radius: 10px;
-    border: 2px solid #EAEAEA;
-    padding: 10px 10px 10px 15px;
-}
-
 .mr-10 {
     margin-right: 10px;
 }
@@ -64,4 +70,9 @@ a {
 .px-20 {
     padding-left: 20px;
     padding-right: 20px;
+}
+
+.mx-auto {
+    margin-left: auto;
+    margin-right: auto;
 }
